8293134: Valhalla: Verifier error in method call with abstract value class arg